@@ -1,15 +1,22 @@
 package ru.vasiljeva.service.impl;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
+import com.querydsl.core.BooleanBuilder;
 
 import lombok.RequiredArgsConstructor;
 import lombok.Setter;
 import ru.vasiljeva.dto.ProductDto;
 import ru.vasiljeva.exceptions.EntityNotFoundException;
+import ru.vasiljeva.model.Product;
+import ru.vasiljeva.model.QProduct;
 import ru.vasiljeva.repository.ProductRepository;
 import ru.vasiljeva.service.MappingUtils;
 import ru.vasiljeva.service.ProductService;
@@ -43,17 +50,31 @@ public class ProductServiceImpl implements ProductService {
 				.map(mappingUtils::mapToProductDto)
 				.orElseThrow(() -> new EntityNotFoundException("Couldn't find product by id " + id));
 		//@formatter:on
-		
+
 	}
 
 	@Override
-	public List<ProductDto> getAll(double minPrice, double maxPrice) {
+	public List<ProductDto> getAll(Map<String, Object> params) {
+		QProduct product = QProduct.product;
+		BooleanBuilder predicate = new BooleanBuilder();
+
+		if (params.containsKey("search")) {
+			predicate.and(product.name.containsIgnoreCase((String) params.get("search")));
+		}
+		if (params.containsKey("minPrice")) {
+			predicate.and(product.cost.goe((Integer) params.get("minPrice")));
+		}
+
+		if (params.containsKey("maxPrice")) {
+			predicate.and(product.cost.loe((Integer) params.get("maxPrice")));
+		}
+
+		Iterable<Product> list = this.productRepository.findAll(predicate);
 		//@formatter:off
-		return this.productRepository
-				.findAll(minPrice, maxPrice)
-				.stream()
+		return StreamSupport
+				.stream(list.spliterator(), false)
 				.map(mappingUtils::mapToProductDto)
-				.collect(Collectors.toList());
+				.toList();
 		//@formatter:on
 	}
 }
